--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,7 +1,7 @@
 {
   "TokenOptions": {
-    "Audience": "engin@engin.com",
-    "Issuer": "engin@engin.com",
+    "Audience": "osmanbingul34@gmail.com",
+    "Issuer": "osmanbingul34@gmail.com",
     "AccessTokenExpiration": 10,
     "SecurityKey": "mysupersecretkeymysupersecretkey"
   },
